k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
  labels:
    app: react-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
      - name: react-ui
        image: myregistry.azurecr.io/react-ui:latest
        ports:
        - containerPort: 80
