k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui-service
  labels:
    app: react-ui
spec:
  type: ClusterIP
  selector:
    app: react-ui
  ports:
  - port: 80
    targetPort: 80
